@@ -4,7 +4,8 @@ Revision history for Perl extension Fl
 
     - New widgets:
         - Fl::Tabs - "File card tabs" interface
-        - Fl::Output - Simple text display widget
+        - Fl::Output - Simple display widget for single lines of text
+        - Fl::MultilineOutput - Simple display widget for multiple lines of text
     - New demo scripts:
         - eg/tabs.pl - Demonstrates Fl::Tabs
         - eg/scrollbar.pl - Demonstrates Fl::Scrollbar and Fl::Output use
